--- a/contrib/config
+++ b/contrib/config
@@ -1,5 +1,5 @@
 [filechooser]
 cmd=yazi-wrapper.sh
-default_dir=$HOME/Downloads
+default_dir=$HOME
 ; Uncomment and edit the line below to change the terminal emulator command
 ; env=TERMCMD=foot
