build: version bump
style: formatting

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project(
     'xdg-desktop-portal-termfilechooser',
     'c',
-    version: '0.4.0',
+    version: '1.0.0',
     license: 'MIT',
     meson_version: '>=0.50.0',
     default_options: ['c_std=c11', 'warning_level=2', 'werror=true'],
@@ -9,16 +9,21 @@ project(
 
 cc = meson.get_compiler('c')
 
-add_project_arguments(cc.get_supported_arguments([
-    '-Wno-missing-braces',
-    '-Wno-missing-field-initializers',
-    '-Wno-unused-parameter',
-    '-D_POSIX_C_SOURCE=200809L',
-]), language: 'c')
+add_project_arguments(
+    cc.get_supported_arguments(
+        [
+            '-Wno-missing-braces',
+            '-Wno-missing-field-initializers',
+            '-Wno-unused-parameter',
+            '-D_POSIX_C_SOURCE=200809L',
+        ],
+    ),
+    language: 'c',
+)
 
 prefix = get_option('prefix')
 sysconfdir = get_option('sysconfdir')
-add_project_arguments('-DSYSCONFDIR="@0@"'.format(join_paths(prefix, sysconfdir)), language : 'c')
+add_project_arguments('-DSYSCONFDIR="@0@"'.format(join_paths(prefix, sysconfdir)), language: 'c')
 
 inc = include_directories('include')
 
@@ -26,19 +31,25 @@ rt = cc.find_library('rt')
 iniparser = dependency('inih')
 
 if get_option('sd-bus-provider') == 'auto'
-    assert(get_option('auto_features').auto(), 'sd-bus-provider must not be set to auto since auto_features != auto')
-    sdbus = dependency('libsystemd',
+    assert(
+        get_option('auto_features').auto(),
+        'sd-bus-provider must not be set to auto since auto_features != auto',
+    )
+    sdbus = dependency(
+        'libsystemd',
         required: false,
         not_found_message: 'libsystemd not found, trying libelogind',
     )
     if not sdbus.found()
-        sdbus = dependency('libelogind',
+        sdbus = dependency(
+            'libelogind',
             required: false,
             not_found_message: 'libelogind not found, trying basu',
         )
     endif
     if not sdbus.found()
-        sdbus = dependency('basu',
+        sdbus = dependency(
+            'basu',
             required: false,
         )
     endif
@@ -50,14 +61,14 @@ else
 endif
 add_project_arguments('-DHAVE_' + sdbus.name().to_upper() + '=1', language: 'c')
 
-xdptf_files = files([
-    'src/core/main.c',
-    'src/core/logger.c',
+xdptf_files = files(
     'src/core/config.c',
+    'src/core/logger.c',
+    'src/core/main.c',
     'src/core/request.c',
     'src/filechooser/filechooser.c',
-    'src/filechooser/uri.c'
-])
+    'src/filechooser/uri.c',
+)
 
 executable(
     'xdg-desktop-portal-termfilechooser',
@@ -73,16 +84,24 @@ executable(
 )
 
 conf_data = configuration_data()
-conf_data.set('libexecdir',
-    join_paths(get_option('prefix'), get_option('libexecdir')))
+conf_data.set('libexecdir', join_paths(get_option('prefix'), get_option('libexecdir')))
 conf_data.set('systemd_service', '')
 
 systemd = dependency('systemd', required: get_option('systemd'))
 
 if systemd.found()
     systemd_service_file = 'xdg-desktop-portal-termfilechooser.service'
-    user_unit_dir = systemd.get_pkgconfig_variable('systemduserunitdir',
-        define_variable: ['prefix', get_option('prefix')])
+    if meson.version().version_compare('>=51')
+        user_unit_dir = systemd.get_variable(
+            pkgconfig: 'systemduserunitdir',
+            pkgconfig_define: ['prefix', get_option('prefix')],
+        )
+    else
+        user_unit_dir = systemd.get_pkgconfig_variable(
+            'systemduserunitdir',
+            define_variable: ['prefix', get_option('prefix')],
+        )
+    endif
     conf_data.set('systemd_service', 'SystemdService=' + systemd_service_file)
 
     configure_file(
@@ -124,7 +143,8 @@ if scdoc.found()
             input: files(src),
             output: output,
             command: [
-                'sh', '-c', '@0@ < @INPUT@ > @1@'.format(scdoc.get_pkgconfig_variable('scdoc'), output)
+                'sh',
+                '-c', '@0@ < @INPUT@ > @1@'.format(scdoc.get_pkgconfig_variable('scdoc'), output),
             ],
             install: true,
             install_dir: join_paths(get_option('mandir'), 'man' + section),
