feat: put systemd service under session.slice
systemd.special man page recommends putting portals in this slice

--- a/contrib/systemd/xdg-desktop-portal-termfilechooser.service.in
+++ b/contrib/systemd/xdg-desktop-portal-termfilechooser.service.in
@@ -8,3 +8,4 @@ Type=dbus
 BusName=org.freedesktop.impl.portal.desktop.termfilechooser
 ExecStart=@libexecdir@/xdg-desktop-portal-termfilechooser
 Restart=on-failure
+Slice=session.slice
