--- a/contrib/config
+++ b/contrib/config
@@ -1,6 +1,8 @@
 [filechooser]
 cmd=yazi-wrapper.sh
 default_dir=$HOME
+; Uncomment to skip creating destination save files with instructions in them
+; create_help_file=0
 ; Uncomment and edit the line below to change the terminal emulator command
 ; env=TERMCMD=foot
 
