feat: auto dependency for sd-bus provider
feat: bump meson target version

--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@ project(
     'c',
     version: '1.2.1',
     license: 'MIT',
-    meson_version: '>=0.50.0',
+    meson_version: '>=0.60.0',
     default_options: ['c_std=c11', 'warning_level=2', 'werror=true'],
 )
 
@@ -40,33 +40,9 @@ iniparser = dependency('inih')
 sd_bus_provider = get_option('sd-bus-provider')
 
 if sd_bus_provider == 'auto'
-    assert(
-        get_option('auto_features').auto(),
-        'sd-bus-provider must not be set to auto since auto_features != auto',
-    )
-    sdbus = dependency(
-        'libsystemd',
-        required: false,
-        not_found_message: 'libsystemd not found, trying libelogind',
-    )
-    if not sdbus.found()
-        sdbus = dependency(
-            'libelogind',
-            required: false,
-            not_found_message: 'libelogind not found, trying basu',
-        )
-    endif
-    if not sdbus.found()
-        sdbus = dependency(
-            'basu',
-            required: false,
-        )
-    endif
-    if not sdbus.found()
-        error('Neither libsystemd, nor libelogind, nor basu was found')
-    endif
+    sdbus = dependency(['libsystemd', 'libelogind', 'basu'], required: true)
 else
-    sdbus = dependency(sd_bus_provider)
+    sdbus = dependency(sd_bus_provider, required: true)
 endif
 add_project_arguments('-DHAVE_' + sdbus.name().to_upper() + '=1', language: 'c')
 
@@ -100,17 +76,10 @@ systemd = dependency('systemd', required: get_option('systemd'))
 
 if systemd.found()
     systemd_service_file = 'xdg-desktop-portal-termfilechooser.service'
-    if meson.version().version_compare('>=51')
-        user_unit_dir = systemd.get_variable(
-            pkgconfig: 'systemduserunitdir',
-            pkgconfig_define: ['prefix', prefix],
-        )
-    else
-        user_unit_dir = systemd.get_pkgconfig_variable(
-            'systemduserunitdir',
-            define_variable: ['prefix', prefix],
-        )
-    endif
+    user_unit_dir = systemd.get_variable(
+        pkgconfig: 'systemduserunitdir',
+        pkgconfig_define: ['prefix', prefix],
+    )
     conf_data.set('systemd_service', 'SystemdService=' + systemd_service_file)
 
     configure_file(
@@ -139,7 +108,12 @@ install_subdir(
     strip_directory: true,
 )
 
-scdoc = dependency('scdoc', required: get_option('man-pages'), version: '>= 1.9.7', native: true)
+scdoc = dependency(
+    'scdoc',
+    required: get_option('man-pages'),
+    version: '>= 1.9.7',
+    native: true,
+)
 if scdoc.found()
     man_pages = ['xdg-desktop-portal-termfilechooser.5.scd']
     foreach src : man_pages
@@ -153,7 +127,7 @@ if scdoc.found()
             output: output,
             command: [
                 'sh',
-                '-c', '@0@ < @INPUT@ > @1@'.format(scdoc.get_pkgconfig_variable('scdoc'), output),
+                '-c', '@0@ < @INPUT@ > @1@'.format(scdoc.get_variable('scdoc'), output),
             ],
             install: true,
             install_dir: join_paths(get_option('mandir'), 'man' + section),
